--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.application.name=ibm-springboot-demo
 
 logging.file.name=ibm-emp.log
 
-server.port=9090
+server.port=8090
+
+spring.data.mongodb.uri=mongodb://localhost:27017/
+spring.data.mongodb.database=ibm
 
