--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,4 @@ spring.data.mongodb.uri=mongodb://localhost:27017/
 spring.data.mongodb.database=ibm
 
 
+#springdoc.swagger-ui.path=/swagger-ui.html
