--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,8 @@ server.port=8090
 spring.data.mongodb.uri=mongodb://localhost:27017/
 spring.data.mongodb.database=ibm
 
+management.endpoints.web.exposure.include=health
+
+       
 
 #springdoc.swagger-ui.path=/swagger-ui.html
