--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,27 @@
 spring.application.name=ibm-springboot-demo
 
-logging.file.name=ibm-emp.log
+#logging.file.name=ibm-emp.log
 
 server.port=8090
-
 
 spring.data.mongodb.uri=mongodb://localhost:27017/
 spring.data.mongodb.database=ibm
 
-management.endpoints.web.exposure.include=health
+#needed
+spring.mail.host=smtp.mail.yahoo.com
+spring.mail.port=465
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.ssl.enable=true
 
-       
+#not needed, if the above is working
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
+
+#management.endpoints.web.exposure.include=health
 
 #springdoc.swagger-ui.path=/swagger-ui.html
+
