--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,21 +7,34 @@ server.port=8090
 spring.data.mongodb.uri=mongodb://localhost:27017/
 spring.data.mongodb.database=ibm
 
-#needed
-spring.mail.host=smtp.mail.yahoo.com
-spring.mail.port=465
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.ssl.enable=true
+management.endpoints.web.exposure.include:*
+management.endpoints.enabled-by-default=true
+management.endpoint.health.enabled=true
+management.endpoint.info.enabled=true
+management.endpoint.metrics.enabled=true
+#management.endpoints.web.base-path=/manage 
+
+#gmail 
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=
+#spring.mail.password=
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+
+#yahoo 
+#spring.mail.host=smtp.mail.yahoo.com
+#spring.mail.port=465
+#spring.mail.username=
+#spring.mail.password=
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.ssl.enable=true
 
 #not needed, if the above is working
 #spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.connectiontimeout=5000
 #spring.mail.properties.mail.smtp.timeout=5000
 #spring.mail.properties.mail.smtp.writetimeout=5000
-
-#management.endpoints.web.exposure.include=health
 
 #springdoc.swagger-ui.path=/swagger-ui.html
 
