--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,11 @@ server.port=8090
 spring.data.mongodb.uri=mongodb://localhost:27017/
 spring.data.mongodb.database=ibm
 
+
+#spring boot actuator access endpoints
+#http://localhost:8090/actuator/info
+
+
 management.endpoints.web.exposure.include:*
 management.endpoints.enabled-by-default=true
 management.endpoint.health.enabled=true
