--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,12 @@ spring.data.mongodb.database=ibm
 
 #spring boot actuator access endpoints
 #http://localhost:8090/actuator/info
-
+#http://localhost:8090/actuator/metric
+#http://localhost:8090/actuator/health
+#http://localhost:8090/actuator/beans
 
 management.endpoints.web.exposure.include:*
+#management.endpoints.web.exposure.include:info,health
 management.endpoints.enabled-by-default=true
 management.endpoint.health.enabled=true
 management.endpoint.info.enabled=true
@@ -36,7 +39,6 @@ management.endpoint.metrics.enabled=true
 #spring.mail.properties.mail.smtp.ssl.enable=true
 
 #not needed, if the above is working
-#spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.connectiontimeout=5000
 #spring.mail.properties.mail.smtp.timeout=5000
 #spring.mail.properties.mail.smtp.writetimeout=5000
